--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-map-gl": "^6.0.3",
+    "react-modal": "^3.12.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
