--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "endomondo-viewer",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "@fullcalendar/daygrid": "^5.5.0",
     "@fullcalendar/react": "^5.5.0",
