--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-map-gl": "^6.0.3",
     "react-modal": "^3.12.1",
     "react-month-picker": "^2.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4",
     "worker-loader": "^3.0.7"
